--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.5.0
 
+  equatable: 2.0.3
+  flutter_bloc: ^8.0.1
+
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
     
