--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.5.0
 
+  flutter_localizations:
+    sdk: flutter
+    
+
   shared_preferences: ^2.0.15
 
   equatable: 2.0.3
@@ -33,7 +37,6 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,6 +51,8 @@ dev_dependencies:
 
   
   flutter_lints: ^1.0.0
+
+  flutter_launcher_icons: 0.9.2
 
 
 flutter:
