--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
     
+  firebase_core: ^1.16.0
+  firebase_crashlytics: ^2.7.2
 
   shared_preferences: ^2.0.15
 
